tests/NormalTests/paczka1/small_fuzzy/39719115.err
Error in line 2: JGp09YFWs A325 56,5
Error in line 6: JGp09YFWs A470 21,9
Error in line 7: JGp09YFWs A325 9,4
Error in line 8: JGp09YFWs A470 88,3
Error in line 11: JGp09YFWs A628 19,8
Error in line 9: A628 A628 41,9
Error in line 15: A628 A325 64,7
